--- a/src/index.css
+++ b/src/index.css
@@ -68,12 +68,12 @@ a{
     display: inline-block;
     cursor: pointer;
 }
-.shapeHighlight{
-    /* display: flex;
-    justify-content: space-between;
+.generatedComparison{
+    display: flex;
+    justify-content: space-evenly;
     align-items: flex-start;
     text-align: start;
-    gap:1%; */
+    gap:1%;
 }
 #shapeViz{
     position: sticky;
