--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ header{
     margin:2rem 0 4rem 0;
     font-size: 16px;
 }
+.icon{
+    width: 12px;
+    height: 12px;
+    margin-right: 5px;
+}
 nav{
     width: 60%;
 }
